<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    tools:context="com.example.myapplication.MainActivity"
    android:orientation="vertical"
    android:padding="10dp">



    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation"
        android:id="@+id/cropimg"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/crop"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/circle"
                android:src="@drawable/ic_plant"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/crop"
                android:text="@string/Crop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/lightgray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/crop_det"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation"
        android:layout_margin="16dp"
        android:id="@+id/weatherimg"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/weather"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/circle_weather"
                android:src="@drawable/ic_cloud"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/crop"
                android:text="@string/weather" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/lightgray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/weather_det"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation"
        android:layout_margin="16dp"
        android:id="@+id/locationimg"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/location"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/circle_location"
                android:src="@drawable/ic_pin"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/crop"
                android:text="@string/locat_ass" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/lightgray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/location_det"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation"
            android:id="@+id/cameraimg"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/camera"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_camera"
                    android:src="@drawable/ic_photo_black_24dp"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/crop"
                    android:text="@string/image" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/image_sub"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation"
            android:id="@+id/calenderimg"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/calender"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_grey"
                    android:src="@drawable/ic_event_black_24dp"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/crop"
                    android:text="@string/Event" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/empty_view_subtitle_text"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation"
            android:id="@+id/phoneimg"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/phone"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_phone"
                    android:src="@drawable/ic_smartphone"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/crop"
                    android:text="@string/call_help" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/phone_Call"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
    <ViewFlipper
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/flip"
        ></ViewFlipper>

</LinearLayout>